# cpp-boilerplate

./: .clang-tidy  .gitignore  CMakeLists.txt  COPYING  Changelog  README
cmake/: clang-dev-tools.cmake
cmake/modules/: CodeCoverage.cmake
ext/gtest/: CMakeLists.txt
include/: example.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  example_test.cpp  example_test.hpp
